fix(FEC-6945): pre-playback bottom and top bars hover visibility

--- a/src/components/pre-playback-play-overlay/_pre-playback-play-overlay.scss
+++ b/src/components/pre-playback-play-overlay/_pre-playback-play-overlay.scss
@@ -26,6 +26,11 @@
   }
 }
 
-.pre-playback .player-gui {
-  opacity: 0 !important;
+.pre-playback {
+  &:hover .player-gui {
+    opacity: 1 !important;
+  }
+  .player-gui {
+    opacity: 0 !important;
+  }
 }
